Erstellen von einem Datenset ausschliesslich mit Schmutzschäden

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -1897,17 +1897,27 @@
     "        if cocodata[\"images\"][n][\"id\"] in subsetIDList:\n",
     "            subset[\"images\"].append(cocodata[\"images\"][n])\n",
     "\n",
-    "def createSubsetAnnotations(subset, cocodata, subsetIDList):\n",
-    "    for n in range(len(cocodata[\"annotations\"])):\n",
-    "        # not needed with a cleaned IDlist\n",
-    "        # cocodata[\"annotations\"][n][\"image_id\"] -= 20000\n",
-    "        if cocodata[\"annotations\"][n][\"image_id\"] in subsetIDList:\n",
-    "            subset[\"annotations\"].append(cocodata[\"annotations\"][n])\n",
+    "def createSubsetAnnotations(subset, cocodata, subsetIDList, label_filter=None):\n",
+    "\tif label_filter == None:\n",
+    "\t\tfor n in range(len(cocodata[\"annotations\"])):\n",
+    "\t\t# not needed with a cleaned IDlist\n",
+    "\t\t# cocodata[\"annotations\"][n][\"image_id\"] -= 20000\n",
+    "\t\t\tif cocodata[\"annotations\"][n][\"image_id\"] in subsetIDList:\n",
+    "\t\t\t\tsubset[\"annotations\"].append(cocodata[\"annotations\"][n])\n",
+    "\telif type(label_filter) == int:\n",
+    "\t\tfor n in range(len(cocodata[\"annotations\"])):\n",
+    "\t\t# not needed with a cleaned IDlist\n",
+    "\t\t# cocodata[\"annotations\"][n][\"image_id\"] -= 20000\n",
+    "\t\t\tif cocodata[\"annotations\"][n][\"image_id\"] in subsetIDList:\n",
+    "\t\t\t\tif cocodata[\"annotations\"][n][\"category_id\"] == label_filter:\n",
+    "\t\t\t\t\tsubset[\"annotations\"].append(cocodata[\"annotations\"][n])\n",
+    "\telse:\n",
+    "\t\traise ValueError(\"Only None or Integer are accepted\")\n",
     "\n",
-    "def createCOCOSubset(cocodata, subsetIDList, description):\n",
+    "def createCOCOSubset(cocodata, subsetIDList, description, lb = None):\n",
     "    cocosub = createSubsetStructure(cocodata, description=description)\n",
     "    createSubsetImages(cocosub, cocodata, subsetIDList)\n",
-    "    createSubsetAnnotations(cocosub, cocodata, subsetIDList)\n",
+    "    createSubsetAnnotations(cocosub, cocodata, subsetIDList, label_filter=lb)\n",
     "    return cocosub\n",
     "\n",
     "# clean subsetIDLists in order to be used with the coco dataset that uses way too hight id numbers\n",
@@ -1977,6 +1987,7 @@
     "                run_idx.append(i)\n",
     "        for y in range(len(dataset_to_delete_stuff[\"annotations\"])):\n",
     "            if dataset_to_delete_stuff[\"annotations\"][y][\"image_id\"] in img_id:\n",
+    "                # klasse herausfiltern für dataset mit nur Wasser\n",
     "                anno_idx.append(y)\n",
     "    \n",
     "    delcount = 0\n",
@@ -2079,6 +2090,56 @@
     "#copyImages(train_names_max, os.path.join(save_path, \"train_max/\"))\n",
     "#copyImages(val_names_max, os.path.join(save_path, \"val_max/\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset mit nur Schmutzschäden nichts sonst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "if type(x) == int:\n",
+    "    print(\"hi\")\n",
+    "else:\n",
+    "    print(type(x))\n",
+    "    print(\"neyyyy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
