experiment mit wasserschäden

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -2138,15 +2138,86 @@
     "train_set_path = os.path.join(folder_train, \"coco_train.json\")\n",
     "val_set_path = os.path.join(folder_val, \"coco_val.json\")\n",
     "\n",
-    "writeJson(json_train, train_set_path)\n",
-    "writeJson(json_val, val_set_path)\n",
+    "#writeJson(json_train, train_set_path)\n",
+    "#writeJson(json_val, val_set_path)\n",
     "\n",
     "train_names = getImageNames(train_set)\n",
     "val_names = getImageNames(val_set)\n",
     "\n",
-    "copyImages(train_names, folder_train)\n",
-    "copyImages(val_names, folder_val)"
+    "#copyImages(train_names, folder_train)\n",
+    "#copyImages(val_names, folder_val)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset mit nur Wasserschäden nichts sonst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "splitvalue = int(len(indexListg) * 0.8)\n",
+    "indexListn = np.asarray(indexListg, dtype=int)\n",
+    "np.random.shuffle(indexListn)\n",
+    "training, validation = indexListn[:splitvalue], indexListn[splitvalue:]\n",
+    "\n",
+    "description_train = \"trainingset_Wasser\"\n",
+    "description_val = \"validierungsset_Wasser\"\n",
+    "\n",
+    "train_set = createCOCOSubset(cocox, training, description_train, 9)\n",
+    "val_set = createCOCOSubset(cocox, validation, description_val, 9)\n",
+    "\n",
+    "json_train = json.dumps(train_set, indent=4)\n",
+    "json_val = json.dumps(val_set, indent=4)\n",
+    "\n",
+    "save_path = \"../../../old/BAA/Data/\"\n",
+    "if os.path.exists(save_path) != True:\n",
+    "    os.mkdir(save_path)\n",
+    "folder_train = os.path.join(save_path, \"train_Wasser/\")\n",
+    "if os.path.exists(folder_train) != True:\n",
+    "    os.mkdir(folder_train)\n",
+    "folder_val = os.path.join(save_path, \"val_Wasser/\")\n",
+    "if os.path.exists(folder_val) != True:\n",
+    "    os.mkdir(folder_val)\n",
+    "train_set_path = os.path.join(folder_train, \"coco_train.json\")\n",
+    "val_set_path = os.path.join(folder_val, \"coco_val.json\")\n",
+    "\n",
+    "#writeJson(json_train, train_set_path)\n",
+    "#writeJson(json_val, val_set_path)\n",
+    "\n",
+    "train_names = getImageNames(train_set)\n",
+    "val_names = getImageNames(val_set)\n",
+    "\n",
+    "#copyImages(train_names, folder_train)\n",
+    "#copyImages(val_names, folder_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
