created a folder and datasplit for every label

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -2199,6 +2199,206 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset mit nur Schäden nichts sonst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "splitvalue = int(len(indexListg) * 0.8)\n",
+    "indexListn = np.asarray(indexListg, dtype=int)\n",
+    "np.random.shuffle(indexListn)\n",
+    "training, validation = indexListn[:splitvalue], indexListn[splitvalue:]\n",
+    "\n",
+    "description_train = \"trainingset_Schäden\"\n",
+    "description_val = \"validierungsset_Schäden\"\n",
+    "\n",
+    "train_set = createCOCOSubset(cocox, training, description_train, 4)\n",
+    "val_set = createCOCOSubset(cocox, validation, description_val, 4)\n",
+    "\n",
+    "json_train = json.dumps(train_set, indent=4)\n",
+    "json_val = json.dumps(val_set, indent=4)\n",
+    "\n",
+    "save_path = \"../../../old/BAA/Data/\"\n",
+    "if os.path.exists(save_path) != True:\n",
+    "    os.mkdir(save_path)\n",
+    "folder_train = os.path.join(save_path, \"train_Schäden/\")\n",
+    "if os.path.exists(folder_train) != True:\n",
+    "    os.mkdir(folder_train)\n",
+    "folder_val = os.path.join(save_path, \"val_Schäden/\")\n",
+    "if os.path.exists(folder_val) != True:\n",
+    "    os.mkdir(folder_val)\n",
+    "train_set_path = os.path.join(folder_train, \"coco_train.json\")\n",
+    "val_set_path = os.path.join(folder_val, \"coco_val.json\")\n",
+    "\n",
+    "#writeJson(json_train, train_set_path)\n",
+    "#writeJson(json_val, val_set_path)\n",
+    "\n",
+    "train_names = getImageNames(train_set)\n",
+    "val_names = getImageNames(val_set)\n",
+    "\n",
+    "#copyImages(train_names, folder_train)\n",
+    "#copyImages(val_names, folder_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset mit nur Sonstigen Sachen nichts sonst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "splitvalue = int(len(indexListg) * 0.8)\n",
+    "indexListn = np.asarray(indexListg, dtype=int)\n",
+    "np.random.shuffle(indexListn)\n",
+    "training, validation = indexListn[:splitvalue], indexListn[splitvalue:]\n",
+    "\n",
+    "description_train = \"trainingset_Sonstiges\"\n",
+    "description_val = \"validierungsset_Sonstiges\"\n",
+    "\n",
+    "train_set = createCOCOSubset(cocox, training, description_train, 6)\n",
+    "val_set = createCOCOSubset(cocox, validation, description_val, 6)\n",
+    "\n",
+    "json_train = json.dumps(train_set, indent=4)\n",
+    "json_val = json.dumps(val_set, indent=4)\n",
+    "\n",
+    "save_path = \"../../../old/BAA/Data/\"\n",
+    "if os.path.exists(save_path) != True:\n",
+    "    os.mkdir(save_path)\n",
+    "folder_train = os.path.join(save_path, \"train_Sonstiges/\")\n",
+    "if os.path.exists(folder_train) != True:\n",
+    "    os.mkdir(folder_train)\n",
+    "folder_val = os.path.join(save_path, \"val_Sonstiges/\")\n",
+    "if os.path.exists(folder_val) != True:\n",
+    "    os.mkdir(folder_val)\n",
+    "train_set_path = os.path.join(folder_train, \"coco_train.json\")\n",
+    "val_set_path = os.path.join(folder_val, \"coco_val.json\")\n",
+    "\n",
+    "#writeJson(json_train, train_set_path)\n",
+    "#writeJson(json_val, val_set_path)\n",
+    "\n",
+    "train_names = getImageNames(train_set)\n",
+    "val_names = getImageNames(val_set)\n",
+    "\n",
+    "#copyImages(train_names, folder_train)\n",
+    "#copyImages(val_names, folder_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset mit nur Schimmelschäden nichts sonst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "splitvalue = int(len(indexListg) * 0.8)\n",
+    "indexListn = np.asarray(indexListg, dtype=int)\n",
+    "np.random.shuffle(indexListn)\n",
+    "training, validation = indexListn[:splitvalue], indexListn[splitvalue:]\n",
+    "\n",
+    "description_train = \"trainingset_Schimmel\"\n",
+    "description_val = \"validierungsset_Schimmel\"\n",
+    "\n",
+    "train_set = createCOCOSubset(cocox, training, description_train, 2)\n",
+    "val_set = createCOCOSubset(cocox, validation, description_val, 2)\n",
+    "\n",
+    "json_train = json.dumps(train_set, indent=4)\n",
+    "json_val = json.dumps(val_set, indent=4)\n",
+    "\n",
+    "save_path = \"../../../old/BAA/Data/\"\n",
+    "if os.path.exists(save_path) != True:\n",
+    "    os.mkdir(save_path)\n",
+    "folder_train = os.path.join(save_path, \"train_Schimmel/\")\n",
+    "if os.path.exists(folder_train) != True:\n",
+    "    os.mkdir(folder_train)\n",
+    "folder_val = os.path.join(save_path, \"val_Schimmel/\")\n",
+    "if os.path.exists(folder_val) != True:\n",
+    "    os.mkdir(folder_val)\n",
+    "train_set_path = os.path.join(folder_train, \"coco_train.json\")\n",
+    "val_set_path = os.path.join(folder_val, \"coco_val.json\")\n",
+    "\n",
+    "#writeJson(json_train, train_set_path)\n",
+    "#writeJson(json_val, val_set_path)\n",
+    "\n",
+    "train_names = getImageNames(train_set)\n",
+    "val_names = getImageNames(val_set)\n",
+    "\n",
+    "#copyImages(train_names, folder_train)\n",
+    "#copyImages(val_names, folder_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset mit nur Schädlingen nichts sonst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "splitvalue = int(len(indexListg) * 0.8)\n",
+    "indexListn = np.asarray(indexListg, dtype=int)\n",
+    "np.random.shuffle(indexListn)\n",
+    "training, validation = indexListn[:splitvalue], indexListn[splitvalue:]\n",
+    "\n",
+    "description_train = \"trainingset_Schädlinge\"\n",
+    "description_val = \"validierungsset_Schädlinge\"\n",
+    "\n",
+    "train_set = createCOCOSubset(cocox, training, description_train, 5)\n",
+    "val_set = createCOCOSubset(cocox, validation, description_val, 5)\n",
+    "\n",
+    "json_train = json.dumps(train_set, indent=4)\n",
+    "json_val = json.dumps(val_set, indent=4)\n",
+    "\n",
+    "save_path = \"../../../old/BAA/Data/\"\n",
+    "if os.path.exists(save_path) != True:\n",
+    "    os.mkdir(save_path)\n",
+    "folder_train = os.path.join(save_path, \"train_Schädlinge/\")\n",
+    "if os.path.exists(folder_train) != True:\n",
+    "    os.mkdir(folder_train)\n",
+    "folder_val = os.path.join(save_path, \"val_Schädlinge/\")\n",
+    "if os.path.exists(folder_val) != True:\n",
+    "    os.mkdir(folder_val)\n",
+    "train_set_path = os.path.join(folder_train, \"coco_train.json\")\n",
+    "val_set_path = os.path.join(folder_val, \"coco_val.json\")\n",
+    "\n",
+    "#writeJson(json_train, train_set_path)\n",
+    "#writeJson(json_val, val_set_path)\n",
+    "\n",
+    "train_names = getImageNames(train_set)\n",
+    "val_names = getImageNames(val_set)\n",
+    "\n",
+    "#copyImages(train_names, folder_train)\n",
+    "#copyImages(val_names, folder_val)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
