fixed wrong save spot

--- a/experimenting/Combine_Data.ipynb
+++ b/experimenting/Combine_Data.ipynb
@@ -147,7 +147,7 @@
     "\n",
     "\n",
     "# write coco file\n",
-    "writeJson(coco_combined, new_filename_coco)\n",
+    "writeJson(coco_combined, path_to_output_folder + new_filename_coco)\n",
     "\n",
     "# move or copy the images\n",
     "moveOrCopyFiles(filepaths_and_names, path_to_output_folder, move_or_copy)"
