prepared for DETA run with augmented data

--- a/experimenting/Combine_Data.ipynb
+++ b/experimenting/Combine_Data.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output folder was created at ../../../old/BAA/Data/val_combined/\n"
+     ]
+    }
+   ],
    "source": [
     "# Inputs in dieses Script sollten zwei datensets im coco format sein, das erste dataset wird als grundlage für die nummerierung des zweiten verwendet, bei mehreren datasets sollte dieses script mehrmals verwendet werden\n",
     "\n",
@@ -59,11 +67,11 @@
     "\n",
     "\n",
     "# json files and images must be in the same directory\n",
-    "path_to_original_images = \"../../../old/BAA/Data/train_max/\"\n",
-    "path_to_original_data_anno = \"../../../old/BAA/Data/train_max/coco_train_max.json\"\n",
-    "path_to_augmented_images = \"../../../old/BAA/Data/train_aug/\"\n",
-    "paths_to_data_augmented_anno = \"../../../old/BAA/Data/train_aug/Augmented_A_coco_train_max.json\"\n",
-    "path_to_output_folder = \"../../../old/BAA/Data/train_combined/\"\n",
+    "path_to_original_images = \"../../../old/BAA/Data/val_max/\"\n",
+    "path_to_original_data_anno = \"../../../old/BAA/Data/val_max/coco_val_max.json\"\n",
+    "path_to_augmented_images = \"../../../old/BAA/Data/val_aug/\"\n",
+    "paths_to_data_augmented_anno = \"../../../old/BAA/Data/val_aug/Augmented_A_coco_val_max.json\"\n",
+    "path_to_output_folder = \"../../../old/BAA/Data/val_combined/\"\n",
     "\n",
     "\n",
     "# verify file existences\n",
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
