--- a/experimenting/DataAugmentation.ipynb
+++ b/experimenting/DataAugmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,11 +687,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_augmentation(\"../../../old/BAA/Data/train_max/\", \"../../../old/BAA/Data/train_aug/\", \"../../../old/BAA/Data/train_max/coco_train_max.json\")"
+    "import random\n",
+    "import json\n",
+    "import cv2\n",
+    "from matplotlib import pyplot as plt\n",
+    "import datetime\n",
+    "\n",
+    "import albumentations as A\n",
+    "\n",
+    "data_augmentation(\"../../../old/BAA/Data/val_max/\", \"../../../old/BAA/Data/val_aug/\", \"../../../old/BAA/Data/val_max/coco_val_max.json\")"
    ]
   },
   {
