--- a/dataCombination/Combine_Data.ipynb
+++ b/dataCombination/Combine_Data.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Version 1.0\n",
+    "Inputs:\n",
+    "(json file, coco) orginal annotations, uses these annotations as base\n",
+    "(json file, coco) augmented (to be added) annotations\n",
+    "\n",
+    "(folder) orginal images\n",
+    "(folder) augmented (to be added) images\n",
+    "\n",
+    "(folder) speicherort der kombinierten Daten\n",
+    "(variable) new annotations file name\n",
+    "(variable) \"move\" or \"copy\" dof images\n",
+    "\n",
+    "Output: \n",
+    "Combines images and annotations in a selected folder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,7 +43,18 @@
     "import glob\n",
     "from PIL import Image\n",
     "\n",
+    "# json files and images must be in the same directory\n",
+    "path_to_original_images = \"../../../old/BAA/Data/val_max/\"\n",
+    "path_to_original_data_anno = \"../../../old/BAA/Data/val_max/coco_val_max.json\"\n",
+    "path_to_augmented_images = \"../../../old/BAA/Data/val_aug/\"\n",
+    "paths_to_data_augmented_anno = \"../../../old/BAA/Data/val_aug/Augmented_A_coco_val_max.json\"\n",
+    "path_to_output_folder = \"../../../old/BAA/Data/val_combined/\"\n",
     "\n",
+    "new_filename_coco = \"coco_Combined\"\n",
+    "move_or_copy = \"copy\" # or \"move\"\n",
+    "\n",
+    "\n",
+    "# define functions\n",
     "def createSubsetStructure(originalData, description):\n",
     "\tsubsetStructure = {\n",
     "\t\t\"info\": [{\"year\": int(datetime.date.today().year)},\n",
@@ -66,12 +97,7 @@
     "\t\traise ValueError(\"Only copy or move are accepted inputs\")\n",
     "\n",
     "\n",
-    "# json files and images must be in the same directory\n",
-    "path_to_original_images = \"../../../old/BAA/Data/val_max/\"\n",
-    "path_to_original_data_anno = \"../../../old/BAA/Data/val_max/coco_val_max.json\"\n",
-    "path_to_augmented_images = \"../../../old/BAA/Data/val_aug/\"\n",
-    "paths_to_data_augmented_anno = \"../../../old/BAA/Data/val_aug/Augmented_A_coco_val_max.json\"\n",
-    "path_to_output_folder = \"../../../old/BAA/Data/val_combined/\"\n",
+    "\n",
     "\n",
     "\n",
     "# verify file existences\n",
@@ -96,9 +122,8 @@
     "with open(paths_to_data_augmented_anno, \"r\") as f:\n",
     "    coco_augmented = json.load(f)\n",
     "\n",
-    "new_filename_coco = \"coco_Combined\"\n",
-    "description_of_new_coco_file = \"Combined Data from {} and {}\".format(path_to_original_data_anno.split(\"/\")[-1], paths_to_data_augmented_anno.split(\"/\")[-1])\n",
-    "move_or_copy = \"copy\" # or \"move\""
+    "\n",
+    "description_of_new_coco_file = \"Combined Data from {} and {}\".format(path_to_original_data_anno.split(\"/\")[-1], paths_to_data_augmented_anno.split(\"/\")[-1])\n"
    ]
   },
   {
