--- a/dataAugmentation/DataAugmentation.ipynb
+++ b/dataAugmentation/DataAugmentation.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataaugmentation\n",
+    "\n",
+    "## Version 1.0\n",
+    "\n",
+    "Has a Torchvision and a Albumentations part\n",
+    "\n",
+    "The Torchvision part wasnt working, therefore the albumentations part was added\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,6 +36,17 @@
     "from torchvision import models, datasets, tv_tensors\n",
     "from torchvision.transforms import v2\n",
     "from torch.utils.data import DataLoader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Torchvision\n",
+    "\n",
+    "(Doesnt Work in the model!!)\n",
+    "\n",
+    "Source: https://pytorch.org/vision/stable/transforms.html"
    ]
   },
   {
@@ -273,33 +304,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import albumentations as A\n",
-    "import cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = A.Compose([\n",
-    "    A.RandomCrop(width=450, height=450),\n",
-    "    A.HorizontalFlip(p=0.5),\n",
-    "    A.RandomBrightnessContrast(p=0.2),\n",
-    "], bbox_params=A.BboxParams(format='coco', min_visibility=0.3))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Albumnentations"
+    "# Albumnentations\n",
+    "\n",
+    "Source: https://albumentations.ai/docs/getting_started/installation/"
    ]
   },
   {
@@ -313,17 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
     "import json\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
     "import datetime\n",
     "\n",
     "import albumentations as A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function to visualize the augmented Images"
    ]
   },
   {
@@ -365,6 +381,13 @@
     "    plt.figure(figsize=(12, 12))\n",
     "    plt.axis('off')\n",
     "    plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Image and Annotations + define Paths"
    ]
   },
   {
@@ -447,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define Transformation Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -461,6 +491,13 @@
     "    ],\n",
     "    bbox_params=A.BboxParams(format='coco', label_fields=['category_ids']),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use and visualize Augmentation of the loaded Image"
    ]
   },
   {
@@ -563,6 +600,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -571,6 +615,20 @@
     "# save image\n",
     "im = Image.fromarray(transformed[\"image\"])\n",
     "im.save(os.path.join(PATH_SAVE, img_name), \"PNG\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Production"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions for Production: Data (image) augmentation for a whole directory"
    ]
   },
   {
@@ -686,8 +744,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Data (image) augmentation\n",
+    "\n",
+    "imports are needed\n",
+    "\n",
+    "writes files directly to the new folder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,15 +768,9 @@
     "\n",
     "import albumentations as A\n",
     "\n",
-    "data_augmentation(\"../../../old/BAA/Data/val_max/\", \"../../../old/BAA/Data/val_aug/\", \"../../../old/BAA/Data/val_max/coco_val_max.json\")"
+    "# Uncomment to run the function above\n",
+    "# data_augmentation(\"../../../old/BAA/Data/val_max/\", \"../../../old/BAA/Data/val_aug/\", \"../../../old/BAA/Data/val_max/coco_val_max.json\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
