--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Quality Assessment für die Bachelorarbeit: Schadenserkennung bei Büchern mit machine learning"
+    "# Data Quality Assessment für die Bachelorarbeit: Schadenserkennung bei Büchern mit machine learning\n",
+    "\n",
+    "## Version 1.0\n",
+    "\n",
+    "Besteht aus einem YOLO und COCO Teil. \n",
+    "Für den Datenexport sollte COCO verwendet werden. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# YOLO DATA"
    ]
   },
   {
@@ -314,13 +326,6 @@
     "    image_namen_liste.append(f\"{z}\")\n",
     "data_preprocessed = data_preprocessed.drop(\"image\", axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1506,6 +1511,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## verschiedene Datenlisten erstellen für die verwendung im coco dataset (filtern nach den korrekten daten)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -1527,37 +1539,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## change to COCO Datastructure\n",
-    "https://cocodataset.org/#format-data\n",
-    "https://github.com/Taeyoung96/Yolo-to-COCO-format-converter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## export data into seperate Datasets"
+    "## export data into seperate Datasets\n",
+    "werden nicht weiter verwendet"
    ]
   },
   {
@@ -1745,6 +1728,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# COCO Datasets\n",
+    "https://cocodataset.org/#format-data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Export from COCO json file"
    ]
   },
@@ -1752,7 +1743,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "erstellen eines zweiten files aus dem die doppelten und nicht annotierten image daten gelöscht wurden."
+    "erstellen eines zweiten files aus dem die doppelten und nicht annotierten image daten gelöscht wurden.\n",
+    "\n",
+    "Diverese zeilen sind auskommentiert um zu verhindern, dass ausversehen Daten auf die festplatte geschrieben werden bei einem run all"
    ]
   },
   {
@@ -1768,7 +1761,17 @@
     "\n",
     "newpath = \"../../../old/BAA/Data/\"\n",
     "newfilename = \"coco_annotations_cleaned.json\"\n",
-    "completeNewPath = \"../../../old/BAA/coco_annotations_cleaned.json\""
+    "completeNewPath = \"../../../old/BAA/coco_annotations_cleaned.json\" # gecleantes Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## filtern des hineingegebenen COCO files, anhand der YOLO Daten\n",
+    "Nur nötig wenn das hineingeladene coco.json nicht zu verwendende daten enthält\n",
+    "\n",
+    "Nur einmal durchlaufen lassen"
    ]
   },
   {
@@ -1781,6 +1784,7 @@
     "#     cocoOriginal = json.load(f)\n",
     "\n",
     "def createSubsetStructure(originalData, description):\n",
+    "    \"\"\"erstellt eine COCO Struktur zum füllen und exportieren als json\"\"\"\n",
     "    subsetStructure = {\n",
     "        \"info\": [{\"year\": int(datetime.date.today().year)},\n",
     "                {\"version\": \"1.0\"},\n",
@@ -1835,30 +1839,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'%25B00001340.png'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data_preprocessed[\"image_name\"].loc[1]"
+    "## Erstellen eines COCO Subsets (Train, Validation, Test)\n",
+    "Testset ist ausgeklammert, da die Daten aus dem Ursprünglichen Datenset entfernt wurden"
    ]
   },
   {
@@ -1867,9 +1852,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "with open(completeNewPath, \"r\") as f:\n",
     "    cocox = json.load(f)\n",
     "\n",
@@ -1954,6 +1936,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Löschen von Testdaten und verschieben/kopieren der restlichen Daten"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -2028,7 +2017,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## grosses Datenset erstellen"
+    "## grosses Datenset erstellen (Mit allen Daten)"
    ]
   },
   {
@@ -2043,16 +2032,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train / Validation Split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(42)\n",
-    "splitvalue = int(len(indexListg) * 0.8)\n",
+    "np.random.seed(42) # für die reproduktion des Experiments\n",
+    "splitvalue = int(len(indexListg) * 0.8) # 80/20 split von training und validationsdaten (Testdaten wurden in einem vorherigen Schritt bereits entfernt), bzw, wie viele sind 80% der Daten\n",
     "indexListn = np.asarray(indexListg, dtype=int)\n",
     "np.random.shuffle(indexListn)\n",
-    "training, validation = indexListn[:splitvalue], indexListn[splitvalue:]"
+    "training, validation = indexListn[:splitvalue], indexListn[splitvalue:] # Datasplit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trainings und Validierungsset erstellen und in benannte ordner kopieren / verschieben, und Annotationen als json dazuschreiben"
    ]
   },
   {
@@ -2397,34 +2400,6 @@
     "#copyImages(train_names, folder_train)\n",
     "#copyImages(val_names, folder_val)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
