Added Description, Version 0.4

--- a/modelOptimisation/hyperparametertuning.ipynb
+++ b/modelOptimisation/hyperparametertuning.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing Metric to be used in Optimisation\n",
+    "\n",
+    "## Version 0.4\n",
+    "\n",
+    "Wasnt used because something didnt work out with the logging bzw. on runtime"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
