Added description and Version 0.1

--- a/UI/UI_dev.ipynb
+++ b/UI/UI_dev.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initial Testing and Developement\n",
+    "\n",
+    "## Version 0.1\n",
+    "\n",
+    "Further Developement and Testing was done in the Python file in \"src/UI_dev.py\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -175,20 +186,6 @@
     "app = ImageApp(testroot)\n",
     "tk.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
