--- a/UI/userInterfaceNussbaumerGeorge.ipynb
+++ b/UI/userInterfaceNussbaumerGeorge.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reference work from the previous WIPRO\n",
+    "\n",
+    "Credits to Nussbaumer&George"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
