updated with exporting data possibility

--- a/experimenting/DETA_exp.ipynb
+++ b/experimenting/DETA_exp.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# DETA\n",
     "\n",
-    "## Version 0.6\n",
+    "## Version 0.8\n",
     "\n",
     "Experiment mit standard DETA"
    ]
@@ -901,6 +901,113 @@
     "        [  52.9637,  755.6959, 1336.9678, 1213.2312],\n",
     "        [ 998.0509,  -69.6900, 2263.0579,  420.4548],\n",
     "        [ -46.3515,  570.4091,  991.9885, 1162.0546]], device='cuda:0')}]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export predictions of new images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def writeJson(jsonObject, filename):\n",
+    "    if filename.split(\".\")[-1] != \"json\":\n",
+    "        filename = f\"{filename}.json\"\n",
+    "    with open(filename, \"w\") as g:\n",
+    "        g.write(jsonObject)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "path_new_images = \"../new_images/\"\n",
+    "path_predictions = \"../predicted_images\"\n",
+    "input_file = \"coco_new.json\"\n",
+    "pred_coco_filename = \"coco_predictions.json\"\n",
+    "threshold_postprocessing = 0.5 # zu 50% sicher ist sich das modell, dass dies ein schaden ist\n",
+    "\n",
+    "list_paths = [os.path.join(path_new_images, filename) for filename in os.listdir(path_new_images) if\n",
+    "                            filename.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))]\n",
+    "\n",
+    "\n",
+    "processor = DetaImageProcessor.from_pretrained(\"facebook/detr-resnet-50\")\n",
+    "\n",
+    "new_dataset = CocoDetection(img_folder=path_new_images, processor=processor, image_name=input_file)\n",
+    "\n",
+    "print(\"Number of training examples:\", len(new_dataset))\n",
+    "\n",
+    "# Copy json if not in folder else create\n",
+    "pred_path = os.path.join(path_predictions, pred_coco_filename)\n",
+    "\n",
+    "with open(os.path.join(path_new_images, input_file), \"r\") as f:\n",
+    "    coco_tmp = json.load(f)\n",
+    "\n",
+    "if os.path.exists(pred_path):\n",
+    "    with open(pred_path, \"r\") as f:\n",
+    "        coco_predict = json.load(f)\n",
+    "    \n",
+    "    # append image infos\n",
+    "    for x in coco_tmp[\"images\"]:\n",
+    "        tmp = True\n",
+    "        for z in coco_predict[\"images\"]:\n",
+    "            if x[\"id\"] == z[\"id\"]:\n",
+    "                tmp = False\n",
+    "        if tmp:\n",
+    "            coco_predict[\"images\"].append(x)\n",
+    "\n",
+    "else:\n",
+    "    coco_predict = copy.copy(coco_tmp)\n",
+    "\n",
+    "# start id for annotations\n",
+    "if coco_predict[\"annotations\"] == []:\n",
+    "    id_count = 0\n",
+    "else:\n",
+    "    id_count = coco_predict[\"annotations\"][-1][\"id\"] + 1\n",
+    "\n",
+    "for z in range(len(list_paths)):\n",
+    "    pixel_values, target = new_dataset[z]\n",
+    "    pixel_values = pixel_values.unsqueeze(0).to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        # forward pass to get class logits and bounding boxes\n",
+    "        outputs = model(pixel_values=pixel_values, pixel_mask=None)\n",
+    "    \n",
+    "    # postprocess model outputs\n",
+    "    width, height = target[\"size\"]\n",
+    "    p_postprocessed_outputs = processor.post_process_object_detection(outputs,\n",
+    "                                                                    target_sizes=[(height, width)],\n",
+    "                                                                    threshold=threshold_postprocessing)\n",
+    "    # darf nur einmal durchlaufen, sonst gibts doppelte einträge\n",
+    "    for d in range(len(p_postprocessed_outputs[0][\"labels\"])):\n",
+    "        # Write predictions into annotations from pred_coco_filename\n",
+    "        # boxes == [xmin, ymin, xmax, ymax]\n",
+    "        box = p_postprocessed_outputs[0][\"boxes\"][d].tolist()\n",
+    "        dict_new_pred = {\"id\":id_count, \n",
+    "                         \"image_id\":torch.Tensor.item(target[\"image_id\"][0]), \n",
+    "                         \"category_id\":int(p_postprocessed_outputs[0][\"labels\"][d]),\n",
+    "                         \"segmentation\":[], \n",
+    "                         \"bbox\":p_postprocessed_outputs[0][\"boxes\"][d].tolist(), \n",
+    "                         \"ignore\":0, \n",
+    "                         \"iscrowd\":0, \n",
+    "                         \"area\":((box[2]-box[0])*(box[3]-box[1]))}\n",
+    "        coco_predict[\"annotations\"].append(dict_new_pred)\n",
+    "        id_count += 1\n",
+    "\n",
+    "    for i in range(len(coco_tmp[\"images\"])):\n",
+    "        if coco_tmp[\"images\"][i][\"id\"] == torch.Tensor.item(target[\"image_id\"][0]):\n",
+    "            del coco_tmp[\"images\"][i]\n",
+    "    # move image to new location\n",
+    "    shutil.move(list_paths[z], os.path.join(path_predictions, list_paths[z].split(\"/\")[-1]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "writeJson(json.dumps(coco_tmp, indent=4), os.path.join(path_new_images, input_file))\n",
+    "writeJson(json.dumps(coco_predict, indent=4), pred_path)\n",
+    "    "
    ]
   }
  ],
